@@ -14,6 +14,7 @@
 * Moved SphereTransmit functions to its own source file.
 * Updated Object class to use SphereTransmit functions.
 * Renamed SphereTransmit to DataTransmit.
+* Moved message encapsulation and encoding to MessageTransmitter class.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
